--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="app">
+  <img
+    class="LogoImage"
+    src="../assets/logo1.png"
+    routerLink="/shop-at-bookattic"
+  />
 
-    <img class="LogoImage" src="../assets/logo.png" routerLink="/shop-at-tact" />
-
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
