--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
 <div class="ShopatTact" style="text-align:center">
-    <h2>Page not found.</h2>
-    <h3>Redirecting to Shop at Tact</h3>
+  <h2>Page not found.</h2>
+  <h3>Redirecting to ShopAtBookAttic</h3>
 </div>
