--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -1,76 +1,99 @@
 @import "../app.component.scss";
 .Productdetails-Container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .ProductContainer {
-    background-color: $ProductBackground;
-    width: 92%;
-    border-radius: 45px;
-    margin: 50px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    box-shadow: 0px 0px 10px 0px $ButtonHoverBackgroundColor;
+  background-color: $ProductBackground;
+  width: 92%;
+  // border-radius: 45px;
+  margin: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  // box-shadow: 0px 0px 10px 0px $ButtonHoverBackgroundColor;
+}
+
+.productImage-desc-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .ProductDetail {
-    background-color: $ContainerBackground;
-    margin: 20px;
-    border: 2px solid rgb(226, 226, 226);
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    justify-content: space-between;
+  background-color: white;
+  margin: 20px;
+  // border: 2px solid rgb(226, 226, 226);
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  justify-content: space-between;
 }
 
 .ProductName {
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 5px;
-    padding-left: 15px;
-    height: 30px;
+  font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5px;
+  padding-left: 15px;
+  padding-top: 10px;
+  height: 30px;
 }
 
 .Product-PriceButton-Container {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.DecrementButton-show {
-    display: inline-block;
-    &:hover {
-        color: $ButtonHoverColor;
-    }
+.IncrementButton {
+  color: white;
+  background-color: dodgerblue;
+  &:hover {
+    background-color: rgb(85, 170, 255);
+  }
 }
 
-.DecrementButton-hide {
-    display: none;
+.IncrementDecrementContainer {
+  align-self: flex-start;
+  padding: 15px;
+}
+
+.DecrementButton-show,
+.IncrementButton-show {
+  display: inline-block;
+  &:hover {
+    color: $ButtonHoverColor;
+  }
+}
+
+.DecrementButton-hide,
+.IncrementButton-hide {
+  display: none;
 }
 
 .Gotocart-StaticButton {
-    font-family: monospace;
-    box-shadow: 0px 0px 5px 0px rgb(99, 98, 98);
-    font-size: 12px;
-    width: 235px;
-    padding: 0px 15px;
-    background-color: $ProductBackground;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
+  font-family: monospace;
+  box-shadow: 0px 0px 5px 0px rgb(99, 98, 98);
+  font-size: 12px;
+  width: 235px;
+  padding: 0px 15px;
+  background-color: $ProductBackground;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
 }
 
 .ProductQuantityDisplay {
-    font-family: sans-serif;
-    margin: 10px;
-    background-color: $ContainerBackground;
-    // padding: 10px;
+  font-family: sans-serif;
+  margin: 10px;
+  background-color: $ContainerBackground;
+  // padding: 10px;
 }
